<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_container"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<ImageView
		android:id="@+id/demoImg"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:adjustViewBounds="true"
		android:scaleType="centerCrop"
		android:src="@drawable/wallpaper" />

	<ImageView
		android:id="@+id/blurryBackground"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:adjustViewBounds="true"
		android:scaleType="centerCrop"
		android:visibility="gone" />

	<View
		android:id="@+id/blurryBackground_darkMask"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#000000"
		android:visibility="gone" />

	<LinearLayout
		android:id="@+id/containerContainer"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:adjustViewBounds="true"
		android:gravity="center_horizontal|center_vertical" >

		<com.chteuchteu.blurify.hlpr.CustomImageView
			android:id="@+id/container"
			android:clickable="true"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="10dp" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/mask"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#88000000"
		android:orientation="vertical"
		android:visibility="gone" />

	<com.edmodo.cropper.CropImageView
		android:id="@+id/CropImageView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center"
		android:visibility="gone" />

	<LinearLayout
		android:id="@+id/ad_container"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true" >

		<com.applovin.adview.AppLovinAdView
			xmlns:applovin="http://schemas.applovin.com/android/1.0"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			applovin:loadAdOnCreate="true" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/buttonsContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="vertical" >

		<Button
			android:id="@+id/getimg"
			style="@style/ButtonText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/pick_photo" />

		<LinearLayout
			android:id="@+id/actions1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal"
			android:visibility="gone" >

			<LinearLayout
				android:layout_width="0px"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_horizontal" >

				<Button
					android:id="@+id/crop"
					style="@style/ButtonText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/crop" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="0px"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_horizontal" >

				<Button
					android:id="@+id/rotate"
					style="@style/ButtonText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/rotate" />
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/actions2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical"
			android:visibility="gone">

			<View
				android:layout_width="match_parent"
				android:layout_height="4dp"
				android:background="@drawable/shadow_gradient"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:background="#ccffffff">

				<LinearLayout
					style="@style/BottomSheetLine">

					<TextView
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="2"
						style="@style/BottomSheetText"
						android:text="@string/blur_amount"/>

					<SeekBar
						android:id="@+id/seekBar"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="3" />
				</LinearLayout>

				<LinearLayout
					style="@style/BottomSheetLine">

					<Switch
						android:id="@+id/selectiveFocusSwitch"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						style="@style/BottomSheetText"
						android:text="@string/selective_focus"/>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/selectiveFocusSizeContainer"
					android:visibility="gone"
					style="@style/BottomSheetLine">

					<TextView
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="2"
						style="@style/BottomSheetText"
						android:text="@string/selective_focus_size"/>

					<SeekBar
						android:id="@+id/selectiveFocusSize"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="3"/>
				</LinearLayout>



				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal" >

					<LinearLayout
						android:layout_width="0px"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:gravity="center_horizontal" >

						<Button
							android:id="@+id/setWallpaper"
							style="@style/ButtonText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/set_wallpaper" />
					</LinearLayout>

					<LinearLayout
						android:layout_width="0px"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:gravity="center_horizontal" >

						<Button
							android:id="@+id/saveimg"
							style="@style/ButtonText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/save" />
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
